@@ -1,3 +1,9 @@
+Thu Nov 18 07:41:38 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * TAO_IDL/be/be_visitor_connector/connector_dds_exh.cpp:
+        * TAO_IDL/be/be_visitor_connector/connector_dds_exs.cpp:
+          Swapped the template arguments.
+
 Wed Nov 17 17:39:41 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * TAO_IDL/be/be_visitor_dds_ts_idl.cpp:
